# movision_mp

./: .cursorrules  .gitignore  CMakeLists.txt  ble_ota.py  build_all.bat  convert_images.py  count_gif_frames.py  esptool_content.txt  esptool_utf8.txt  flash_log.txt  manual_build.bat  ota_tool.py  pack_update.py  package_update.py  partitions.csv  pc_ble_ota_test.py  pc_ble_scan.py  pc_ble_storage_ota.py  pc_ble_unified_ota.py  rename_files.py  results.txt  results2.txt  results3.txt  sdkconfig  temp_old_main.c  temp_old_main2.c  test_ble_client.py  trim_gif.py
docs/: (보안)MCON AMOLED 연동 프로토콜 v1.6_260323.pptx  -- 정상연결.. --.txt  bugreport_btsnoop_guide.txt  log_analysis_comparison.md  log_comparison_analysis.md  protocol_v1_9_summary.md  보드교체_가이드.md
logs/: filtered_log_20260105_065026.txt  filtered_log_20260105_083652.txt  log_20251229_173909.txt  log_20251229_175453.txt  log_20251229_180212.txt  log_20251229_181748.txt  log_20251229_183940.txt  log_20251229_203634.txt  log_20251229_203650.txt  log_20260105_063023.txt  log_20260105_063225.txt  log_20260105_063305.txt  log_20260109_084302.txt  log_20260109_085646.txt  log_20260109_091637.txt
main/: CMakeLists.txt  board_config.h  fw_update.c  fw_update.h  idf_component.yml  img_transfer.c  img_transfer.h  lv_psram_mem.h  main.c  ota_ble.c  ota_ble.h  ota_sd.c  ota_sd.h  ota_wifi.c  ota_wifi.h
main/flash_data/: Safety_DRV.CSV  TBT.CSV  merged_log.txt
tmp/: process_logs.py
tools/: apply_pin_config.py  ble_diagnostic_tool.py  btsnoop_att_summary.py  combine_bins.py  gen_version.cmake  merged_log.txt  sim_tool.html
(+684 files in other folders)
